made changes to the a2a route file

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mastra/loggers": "^0.10.18",
     "@mastra/memory": "^0.15.10",
     "compromise": "^14.14.4",
+    "express": "^5.1.0",
     "node-fetch": "^3.3.2",
     "zod": "^4.1.12"
   },
